--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "react": "^16.8.6",
     "react-dev-utils": "^4.2.3",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
+    "redux": "^4.0.4",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.5.9",
