--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "chalk": "1.1.3",
     "css-loader": "0.28.4",
     "dotenv": "4.0.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "4.4.1",
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
@@ -37,6 +39,7 @@
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
+    "react-test-renderer": "^16.12.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "style-loader": "0.18.2",
